<resources>
    <string name="app_name">Grocery App</string>
    <string name="add_items_to_cart">Add Items to Cart</string>
    <string name="enter_item_name">Enter Item Name</string>
    <string name="enter_item_price">Enter Item Price</string>
    <string name="enter_item_quantity">Enter Item Quantity</string>
    <string name="cancel">Cancel</string>
    <string name="add">Add</string>
</resources>